[project]
name = "titanic-prediction"
version = "0.1.0"
description = "A machine learning project for starting with Titanic dataset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "notebook",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
    "xgboost>=3.0.4",
]
